--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   }
 }
