--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "loggin-tests",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node src",
