--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   }
